# game_cad

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml  static.yml
documentation/: Doxyfile
include/gcad/: players.h  players2.h  replay.h  solver.h
samples/: CMakeLists.txt  chance.cpp  communication.cpp  functions.cpp  grid_gradient.cpp  grid_search.cpp  guess.cpp  inference.cpp  introduction.cpp  race.cpp  rock_paper_scissors.cpp  tic_tac_toe.cpp  tic_tac_toe_gui.cpp
samples/snippets/: functions.cpp
source/: CMakeLists.txt  players.cpp  players2.cpp  replay.cpp  solver.cpp
